# Raytracer

./: CMakeLists.txt
Include/: Color.h  IObject.h  ImageTypes.h  TPlane.h  TPoint3D.h  TRay.h  TSphere.h  TVec3D.h
src/: Color.cpp  IObject.cpp  TPlane.cpp  TPoint3D.cpp  TRay.cpp  TSphere.cpp  TVec3D.cpp  main.cpp
